# news-scraper

./: .env.prod.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
.claude-flow/agents/: store.json
.github/workflows/: ci.yml  deploy.yml
.swarm/: state.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  alembic.ini  celerybeat-schedule  config.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_initial_schema.py  20240101_000001_add_continuous_aggregates.py  20260123_100400_sync_with_current_models.py  20260123_120000_add_api_keys_table.py
backend/api/: dependencies.py  main.py  schemas.py
backend/api/middleware/: __init__.py  rate_limiter.py  validation.py
backend/api/routes/: alerts.py  api_keys.py  auth.py  billing.py  events.py  notifications.py  search.py  stats.py  tickers.py  watchlist.py
backend/api/security/: __init__.py  api_key.py
backend/api/websocket/: __init__.py  manager.py  streamer.py
backend/core/: __init__.py  secrets.py
backend/data/: ticker_kb.json
backend/ingestion/: __init__.py
backend/ingestion/infrastructure/: __init__.py  proxy_manager.py  rate_limiter.py  request_client.py  user_agent_rotator.py
backend/ingestion/otc_markets/: __init__.py  daily_list_parser.py  disclosure_scraper.py  tier_monitor.py
backend/ingestion/scrapers/: __init__.py  base_scraper.py  newswire_client.py  paywall_detector.py  penny_stocks_scraper.py  rss_aggregator.py
backend/ingestion/sec_edgar/: __init__.py  filing_parser.py  form4_parser.py  polling_client.py  streaming_client.py  xbrl_extractor.py
backend/ingestion/social/: __init__.py  reddit_monitor.py  sentiment_aggregator.py  stocktwits_client.py  twitter_stream.py
backend/monitoring/: __init__.py
backend/notifications/: __init__.py  email_service.py  email_templates.py  notification_manager.py
backend/processing/: __init__.py
backend/processing/classification/: __init__.py  direction_predictor.py  event_classifier.py  industry_classifier.py  ml_classifier.py  subcategory_classifier.py  urgency_scorer.py
backend/processing/ner/: __init__.py  company_resolver.py  entity_extractor.py  knowledge_base.py  ticker_disambiguator.py  ticker_linker.py
backend/processing/scoring/: __init__.py  alpha_calculator.py  alpha_decay.py  liquidity_scorer.py  market_data_service.py  recency_decay.py  source_weights.py
backend/processing/sentiment/: __init__.py  batch_processor.py  finbert_service.py  simple_service.py
backend/scripts/: seed_data.py
backend/services/: __init__.py  redpanda_consumer.py  streaming.py
backend/storage/: __init__.py
backend/storage/opensearch/: __init__.py  client.py  indexer.py  search_service.py
backend/storage/timescale/: __init__.py  connection.py  models.py  queries.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_ingestion.py  test_notifications.py  test_processing.py
backend/tests/test_api/: test_events.py
backend/tests/test_integration/: __init__.py  test_alert_triggering.py  test_event_storage.py  test_scraping_pipeline.py  test_websocket_flow.py
backend/tests/test_scrapers/: test_base_scraper.py  test_newswire_client.py  test_reddit_monitor.py  test_rss_aggregator.py  test_sec_edgar.py
backend/tests/test_tasks/: test_alerting_tasks.py  test_nlp.py  test_scraping_tasks.py  test_storage_tasks.py
backend/workers/: __init__.py  celery_app.py
backend/workers/tasks/: __init__.py  alerting_tasks.py  backfill_tasks.py  backup_tasks.py  dead_letter.py  enrichment_tasks.py  nlp_tasks.py  scoring_tasks.py  scraping_tasks.py  social_tasks.py  storage_tasks.py
deploy/: .env.production.example  docker-stack.yml  init-db.sql
deploy/nginx/: nginx.conf
deploy/nginx/sites/: news-scraper.conf
deploy/scripts/: backup.sh  deploy.sh  health-check.sh  setup.sh
docs/: ALERT_CONFIGURATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER_REGISTRY.md  FAQ.md  FINETUNING.md  PAYWALL_STRATEGY.md  PRD.md  SECURITY.md  TASK_CHECKLIST.md  TROUBLESHOOTING.md  USER_GUIDE.md
frontend/: .dockerignore  Dockerfile  cypress.config.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/__tests__/: test-utils.tsx
frontend/__tests__/components/: EventCard.test.tsx  (+2 more)
frontend/public/: firebase-messaging-sw.js  manifest.json  robots.txt  sw.js
frontend/scripts/: generate-icons.js
frontend/src/: middleware.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml  promtail-config.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: backup-db.sh  finetune_finbert.py  make_readme_figures.py  prepare_finetuning_data.py  setup-hooks.sh
(+73 files in other folders)
