[project]
name = "news-scraper"
version = "0.1.0"
description = "Micro-Alpha News Scraper for Illiquid Assets Sentiment"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Redis
    "redis>=5.0.1",
    "aioredis>=2.0.1",

    # Kafka
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.3.0",

    # OpenSearch
    "opensearch-py>=2.4.2",

    # HTTP clients
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "feedparser>=6.0.11",

    # NLP
    "spacy>=3.7.4",
    "transformers>=4.37.2",
    "torch>=2.2.0",
    "sentencepiece>=0.1.99",

    # Task queue
    "celery>=5.3.6",
    "flower>=2.0.1",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Billing
    "stripe>=8.0.0",

    # Social APIs
    "tweepy>=4.14.0",
    "praw>=7.7.1",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "orjson>=3.9.12",
    "pendulum>=3.0.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
