[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-scraper"
version = "0.1.0"
description = "Micro-Alpha News Scraper for Illiquid Assets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # FastAPI and web server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # Redis
    "redis>=5.0.1",

    # OpenSearch
    "opensearch-py>=2.4.2",

    # Kafka (Redpanda compatible)
    "aiokafka>=0.10.0",
    "kafka-python>=2.0.2",

    # Celery
    "celery>=5.3.6",
    "flower>=2.0.1",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",

    # Stripe
    "stripe>=8.0.0",

    # Validation and Settings
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # NLP/ML
    "spacy>=3.7.2",
    "transformers>=4.37.0",
    "torch>=2.1.0",

    # Scraping
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.10",
    "lxml>=5.1.0",
    "tenacity>=8.2.3",

    # Utilities
    "structlog>=24.1.0",
    "python-dateutil>=2.8.2",

    # Firebase for push notifications
    "firebase-admin>=6.4.0",

    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "aiosqlite>=0.19.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
